--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ http {
     access_log  /var/log/nginx/flaskapp.log;
 
     location / {
-        proxy_pass http://172.30.107.72:9001;
+        proxy_pass http://far-chatbot:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
